fix: layout overflow in split view

--- a/test/extend.css
+++ b/test/extend.css
@@ -1,3 +1,8 @@
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+}
 #container {
   background-color: antiquewhite;
   color: black;
@@ -12,6 +17,9 @@
 }
 .item_split {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 .item_split.left {
   background-color: #f0f0f0;
